Update LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
               <a target="_blank" href="https://twitter.com/poeticdev" data-hover="Twitter">Twitter</a>
             </li>
             <li class="linkedin">
-              <a target="_blank" href="#" data-hover="LinkedIn">LinkedIn</a>
+              <a target="_blank" href="https://www.linkedin.com/in/joshuachinemezu/" data-hover="LinkedIn">LinkedIn</a>
             </li>
           </ul>
         </div>
