Update skills section in the index file

--- a/index.html
+++ b/index.html
@@ -590,8 +590,8 @@
                 <span>Skills</span>
               </h3>
               <p class="content-detail">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                aliquam erat volutpat.
+                I have quite a couple of skills both in development and in business but I believe that the acquisition of skills and knowledge
+                is an insatiable quest. These are some of the programming languages that I have worked with over the years.
               </p>
             </div>
             <div class="col-md-9 content-right">
