--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
 <body>
   <!--PRELOADER-->
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div id="status">
       <img alt="logo" src="images/logo.png">
     </div>
-  </div>
+  </div> -->
   <!--/.PRELOADER END-->
 
   <!--HEADER -->
